# RapidSpeech.cpp

./: .gitmodules  CMakeLists.txt  README-CN.md  README.md  pyproject.toml  setup.py
.github/workflows/: bindings_ci.yml  ci_test.yml  pypi_publish.yml  release_binaries.yml
cmake/: openfst.cmake  pybind11.cmake
docs/: TECHNICAL-CN.md  TECHNICAL.md
examples/: main.cpp  rs-asr-offline.cpp
examples/asr/: rs-asr-offline.cpp  rs-asr-online.cpp  rs-asr-vad-online.cpp
examples/imatrix/: imatrix_collector.h  rs-imatrix.cpp
examples/quantize/: common_quantize.cpp  common_quantize.h  quantize.cpp
examples/tts/: rs-tts-offline.cpp  rs-tts-online.cpp
include/: rapidspeech.h
node-api-example/: README.md  index.js  package.json
python-api-examples/: README.md
python-api-examples/asr/: asr-offline.py
python-api-examples/tts/: tts-offline.py
rapidspeech/: __init__.py  _version.py
rapidspeech/data/kokoro_en/: NOTICE.md  README.md  meta.txt
rapidspeech/data/kokoro_zh/: pinyin_meta.txt
rapidspeech/data/wetext/: README.md
rapidspeech/python/: pybind_rapidspeech.cpp
rapidspeech/src/arch/: bert.cpp  bert.h  campplus.cpp  campplus.h  cosyvoice3.cpp  cosyvoice3.h  cosyvoice3_decode.cpp  cosyvoice3_flow.cpp  cosyvoice3_flow.h  cosyvoice3_hift.cpp  cosyvoice3_hift.h  cosyvoice3_ras.cpp  cosyvoice3_ras.h  ctc_decoder.h  dac_metal.h  dac_metal.mm  fireredvad.cpp  fireredvad.h  funasr-nano.cpp  funasr-nano.h  keyword_loader.cpp  keyword_loader.h  kokoro.cpp  kokoro.h  kokoro_metal.h  kokoro_metal.mm  kws_decoder.cpp  kws_decoder.h  llm_graph.cpp  llm_graph.h  llm_kv_cache.cpp  llm_kv_cache.h  llm_model.cpp  llm_model.h  llm_types.h  omnivoice.cpp  omnivoice.h  openvoice2.cpp  openvoice2.h  qwen2.cpp  (+8 more)
rapidspeech/src/c_api/: rapidspeech_c.cpp  rs_speaker.cpp
rapidspeech/src/core/: rs_context.cpp  rs_context.h  rs_kws.cpp  rs_kws.h  rs_model.h  rs_processor.cpp  rs_processor.h
rapidspeech/src/frontend/: audio_processor.cpp  audio_processor.h  cjk_pinyin_table.h  cosyvoice3_mel.cpp  cosyvoice3_mel.h  fftsg.c  kokoro_g2p_en.cpp  kokoro_g2p_en.h  kokoro_g2p_zh.cpp  kokoro_g2p_zh.h  kokoro_pinyin.cpp  kokoro_pinyin.h  kokoro_zh_tone_sandhi.cpp  kokoro_zh_tone_sandhi.h  text_frontend.cpp  text_frontend.h  wetext_normalizer.cpp  wetext_normalizer.h
rapidspeech/src/utils/: debug_utils.h  rs_data_paths.cpp  rs_data_paths.h  rs_log.cpp  rs_log.h  rs_wav.cpp  rs_wav.h
rapidspeech/wasm/: CMakeLists.txt  build-wasm.sh  rapidspeech_wasm.cpp
scripts/: convert_bert_to_gguf.py  convert_fireredvad_to_gguf.py  convert_hf_to_gguf.py  convert_kokoro_to_gguf.py  convert_omnivoice_to_gguf.py  convert_openvoice2.py  convert_openvoice2_v2.py
src/arch/: ctc_decoder.h  sensevoice.cpp  sensevoice.h
src/core/: rs_context.cpp  rs_context.h  rs_model.h  rs_processor.cpp
src/frontend/: audio_processor.cpp  audio_processor.h
src/utils/: rs_log.h  rs_wav.cpp  rs_wav.h
test/: test_audio_frontend.cpp
tests/: test_audio_frontend.cpp  test_cosyvoice3_e2e.cpp  test_kokoro_en_g2p.cpp  test_kokoro_metal_convt.cpp  test_wetext_normalizer.cpp
tests/bindings/: download_models.sh
tests/bindings/node/: test_surface.mjs
tests/bindings/python/: conftest.py  test_asr_functional.py  test_surface.py  test_tts_functional.py  test_vad_functional.py
tests/bindings/wasm/: test_build_artifacts.mjs
wasm-examples/: .gitignore  README.md  app.js  index.html  rapidspeech-bridge.js  styles.css  utils.js
wasm-examples/pages/: asr-offline.js  asr-online.js  tts-offline.js
